--- a/App/package.json
+++ b/App/package.json
@@ -12,12 +12,18 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/messaging": "^19.2.2",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "react": "18.2.0",
-    "react-native": "^0.73.2",
+    "react-native": "0.73.2",
+    "react-native-document-picker": "^9.2.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.10.2",
     "react-native-permissions": "^4.1.1",
     "react-native-push-notification": "^8.1.1",
